Content-Table: Use universal selectors and increased nesting for 'better' behaviour -- bad idea?

--- a/test/visual/table.html
+++ b/test/visual/table.html
@@ -47,6 +47,25 @@
             <td>Cell</td>
         </tr>
     </tbody>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td colspan="2">Spanned Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+    </tbody>
     <tfoot>
         <tr>
             <th>#</th>
@@ -67,6 +86,25 @@
             <th>Header 3</th>
         </tr>
     </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td colspan="2">Spanned Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+    </tbody>
     <tbody>
         <tr>
             <td>1</td>
@@ -125,6 +163,25 @@
             <td>Cell</td>
         </tr>
     </tbody>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td colspan="2">Spanned Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+    </tbody>
     <tfoot>
         <tr>
             <th>#</th>
@@ -145,6 +202,25 @@
             <th>Header 3</th>
         </tr>
     </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td colspan="2">Spanned Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+    </tbody>
     <tbody>
         <tr>
             <td>1</td>
@@ -203,6 +279,25 @@
             <td>Cell</td>
         </tr>
     </tbody>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td colspan="2">Spanned Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+    </tbody>
     <tfoot>
         <tr>
             <th>#</th>
@@ -223,6 +318,25 @@
             <th>Header 3</th>
         </tr>
     </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td colspan="2">Spanned Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+    </tbody>
     <tbody>
         <tr>
             <td>1</td>
@@ -281,6 +395,25 @@
             <td>Cell</td>
         </tr>
     </tbody>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td colspan="2">Spanned Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+    </tbody>
     <tfoot>
         <tr>
             <th>#</th>
@@ -301,6 +434,25 @@
             <th>Header 3</th>
         </tr>
     </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td colspan="2">Spanned Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Cell</td>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+    </tbody>
     <tbody>
         <tr>
             <td>1</td>
@@ -886,7 +1038,7 @@
     <tr>
         <td> 3 </td>
         <td>
-            <table class="table table-warning border-warning">
+            <table class="table table-walled table-warning border-warning">
                 <tbody><tr>
                     <td>
                         <table class="table">
